--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.0",
     "vercel": "^27.3.8",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
